syntax = "proto3";

package test.extensions.filters.listener.proxy_protocol;

import "envoy/extensions/filters/listener/proxy_protocol/v3/proxy_protocol.proto";
import "test/extensions/filters/listener/common/fuzz/listener_filter_fuzzer.proto";
import "buf/validate/validate.proto";

message ProxyProtocolTestCase {
  envoy.extensions.filters.listener.proxy_protocol.v3.ProxyProtocol config = 1
      [(buf.validate.field).required = true];
  test.extensions.filters.listener.FilterFuzzWithDataTestCase fuzzed = 2
      [(buf.validate.field).required = true];
}
